--- a/configure.ac
+++ b/configure.ac
@@ -14,10 +14,10 @@ AC_CONFIG_HEADERS([src/config/yieldstakingwallet-config.h])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([build-aux/m4])
 
-BITCOIN_DAEMON_NAME=yieldstakingwalletd
-BITCOIN_GUI_NAME=yieldstakingwallet-qt
-BITCOIN_CLI_NAME=yieldstakingwallet-cli
-BITCOIN_TX_NAME=yieldstakingwallet-tx
+BITCOIN_DAEMON_NAME=yswd
+BITCOIN_GUI_NAME=ysw-qt
+BITCOIN_CLI_NAME=ysw-cli
+BITCOIN_TX_NAME=ysw-tx
 
 dnl Unless the user specified ARFLAGS, force it to be cr
 AC_ARG_VAR(ARFLAGS, [Flags for the archiver, defaults to <cr> if not set])
