--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,147 @@
+.gitignore
+*.sublime-project
+*.sublime-workspace
+todo.txt
+reset-files.bash
 
-.vs/CMake Overview
+*.tar.gz
 
-.vs/cmake.db
+*.exe
+src/yieldstakingwallet
+src/yswd
+src/ysw-cli
+src/ysw-tx
+src/bench/bench_yieldstakingwallet
+src/test/test_yieldstakingwallet
+src/qt/test/test_ysw-qt
 
-.vs/pivx-gui/v16/.suo
+# autoreconf
+Makefile.in
+aclocal.m4
+autom4te.cache/
+build-aux/config.guess
+build-aux/config.sub
+build-aux/depcomp
+build-aux/install-sh
+build-aux/ltmain.sh
+build-aux/m4/libtool.m4
+build-aux/m4/lt~obsolete.m4
+build-aux/m4/ltoptions.m4
+build-aux/m4/ltsugar.m4
+build-aux/m4/ltversion.m4
+build-aux/missing
+build-aux/compile
+build-aux/test-driver
+config.log
+config.status
+configure
+confdefs.h
+conftest.cpp
+conftest.err
+libtool
+src/config/yieldstakingwallet-config.h
+src/config/yieldstakingwallet-config.h.in
+src/config/stamp-h1
+share/setup.nsi
+share/qt/Info.plist
+contrib/devtools/split-debug.sh
 
-.vs/pivx-gui/v16/Browse.VC.db
+src/univalue/gen
 
-.vs/pivx-gui/v16/ipch/AutoPCH/b3ef229bc98d174b/CHAINPARAMS.ipch
+src/qt/*.moc
+src/qt/moc_*.cpp
+src/qt/forms/ui_*.h
 
-.vs/ProjectSettings.json
+src/qt/test/moc*.cpp
 
-.vs/slnx.sqlite
+.deps
+.dirstamp
+.libs
+.*.swp
+*.*~*
+*.bak
+*.rej
+*.orig
+*.pyc
+*.o
+*.o-*
+*.patch
+.yieldstakingwallet
+*.a
+*.pb.cc
+*.pb.h
 
-.vs/VSWorkspaceState.json
+*.log
+*.trs
+*.dmg
+
+*.json.h
+*.raw.h
+
+#libtool object files
+*.lo
+*.la
+
+# Compilation and Qt preprocessor part
+*.qm
+Makefile
+ysw-qt
+YSW-Qt.app
+background.tiff*
+
+# Rust
+.cargo/.configured-for-*
+.cargo/config
+target/
+
+# Unit-tests
+Makefile.test
+ysw-qt_test
+src/test/buildenv.py
+
+# Resources cpp
+qrc_*.cpp
+
+# Qt creator
+*.pro.user
+
+# Mac specific
+.DS_Store
+build
+
+#lcov
+*.gcno
+/*.info
+test_yieldstakingwallet.coverage/
+total.coverage/
+coverage_percent.txt
+
+#build tests
+linux-coverage-build
+linux-build
+win32-build
+test/config.ini
+test/cache/*
+qa/pull-tester/run-bitcoind-for-test.sh
+qa/pull-tester/tests-config.sh
+qa/pull-tester/cache/*
+qa/pull-tester/test.*/*
+cache/*
+
+!src/leveldb*/Makefile
+
+.cproject
+.project
+/doc/doxygen/
+/nbproject/
+libbitcoinconsensus.pc
+.idea
+CMakeLists.txt
+cmake-build-debug
+
+moc_*
+*.tmp
+ui_*
+build*
+yswd.*
+yswd-new-gui.*
